# serializer version: 1
# name: test_all_entities[image.gummibaum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.gummibaum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fyta',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ce5f5431554d101905d31797e1232da8-0-plant_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[image.gummibaum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.gummibaum?token=1',
      'friendly_name': 'Gummibaum',
    }),
    'context': <ANY>,
    'entity_id': 'image.gummibaum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[image.kakaobaum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.kakaobaum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'fyta',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ce5f5431554d101905d31797e1232da8-1-plant_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[image.kakaobaum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.kakaobaum?token=1',
      'friendly_name': 'Kakaobaum',
    }),
    'context': <ANY>,
    'entity_id': 'image.kakaobaum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
